adjust sentences and words

--- a/doc/breaking_change_rules/1002.md
+++ b/doc/breaking_change_rules/1002.md
@@ -2,7 +2,7 @@
 
 **Description**: Checks whether an existing cmd is removed from the previous cli version. 
 
-**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released in breaking-change window.
+**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released during breaking-change window.
 
 **Example**: Cmd `az monitor diagnostic-setting show` is being removed during non-breaking-change window.
 
