--- a/doc/breaking_change_rules/1004.md
+++ b/doc/breaking_change_rules/1004.md
@@ -1,9 +1,9 @@
 ### 1004 - Cmd Property Removed
 
-**Description**: Checks whether a new property of a cmd is removed from the previous cli version. 
+**Description**: Checks whether an existing property of a cmd is removed from the previous cli version. 
 
-**Analysis**: Not all configured properties removed from a cmd is considered as breaking change. The properties listed in CMD_PROPERTY_REMOVE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
-For now, removed properties in cmd level do not cause breaking workflows.
+**Analysis**: Not all configured properties removed from a cmd are considered breaking changes. The properties listed in CMD_PROPERTY_REMOVE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
+For now, removed properties in cmd level does not break workflow.
 * CMD_PROPERTY_REMOVE_BREAK_LIST = [] 
 
 **Example**: In new cli version, cmd `az monitor diagnostic-setting delete` is changed from `is_preview` to stable, which does not disrupt users' actions.
