--- a/doc/breaking_change_rules/1006.md
+++ b/doc/breaking_change_rules/1006.md
@@ -3,8 +3,8 @@
 **Description**: Checks whether a new parameter is added to a cmd from the previous cli version. 
 
 **Analysis**: This is considered an additive change in new cli version. 
-* If the added parameter is required argument, then, it is a breaking change
-* If the added parameter is not required, it's not a breaking change.
+* If the added parameter is a `required` argument, then, it is a breaking change
+* If the added parameter is just optional, it's not a breaking change.
 
 **Example**: A new parameter `--marketplace-partner-id` is being added to cmd `az monitor diagnostic-setting create` in new cli version.
 
