--- a/doc/breaking_change_rules/1007.md
+++ b/doc/breaking_change_rules/1007.md
@@ -2,7 +2,7 @@
 
 **Description**: Checks whether an existing parameter of a cmd is removed from the previous cli version. 
 
-**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released in breaking-change window.
+**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released during breaking-change window.
 
 **Example**: An existing parameter `--export-to-resource-specific` is removed from cmd `az monitor diagnostic-setting create` in new cli version.
 
@@ -17,7 +17,7 @@
 > 
 > --name -n [Required] : The name of the diagnostic setting. Required.
 > 
-> --export-to-resource-specific : Indicate that the export to LA must be done to a resource specific table
+> --export-to-resource-specific : Indicate that the export to LA must be done to a resource specific table.
 > 
 > --event-hub : Name or ID an event hub. 
 > 
