--- a/doc/breaking_change_rules/1005.md
+++ b/doc/breaking_change_rules/1005.md
@@ -2,8 +2,8 @@
 
 **Description**: Checks whether a cmd's property value is updated from the previous cli version. 
 
-**Analysis**: Not all configured properties updated for a cmd is considered as breaking change. The properties listed in CMD_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
-For now, updated properties in cmd level do not cause breaking workflows.
+**Analysis**: Not all configured properties updated for a cmd are considered as breaking changes. The properties listed in CMD_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
+For now, updated properties in cmd level does not break workflow.
 * CMD_PROPERTY_UPDATE_BREAK_LIST = [] 
 
 **Example**: In new cli version, cmd `az monitor diagnostic-setting delete` is changed from `is_aaz=false` to `is_aaz=true` after migration, which does not disrupt users' actions.
