--- a/doc/breaking_change_rules/1008.md
+++ b/doc/breaking_change_rules/1008.md
@@ -2,8 +2,8 @@
 
 **Description**: Checks whether a new property is configured to a cmd's parameter. 
 
-**Analysis**: Not all newly configured properties for a cmd's parameter are considered as breaking change. The properties listed in PARA_PROPERTY_ADD_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
-* PARA_PROPERTY_ADD_BREAK_LIST = ["required", "choices", "nargs"]
+**Analysis**: Not all newly configured properties for a cmd's parameter are considered breaking changes. The properties listed in PARA_PROPERTY_ADD_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
+* PARA_PROPERTY_ADD_BREAK_LIST = ["required", "choices"]
 
 **Example**: In new cli version, `required` is being added to `resource_group_name` of cmd `az monitor private-link-scope scoped-resource delete` which caused corrupt workflows.
 
