--- a/doc/breaking_change_rules/1009.md
+++ b/doc/breaking_change_rules/1009.md
@@ -2,10 +2,10 @@
 
 **Description**: Checks whether an existing property is removed from a cmd's parameter. 
 
-**Analysis**: Not all configured properties removed from a cmd's parameter are considered as breaking changes. The properties listed in PARA_PROPERTY_REMOVE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
+**Analysis**: Not all configured properties removed from a cmd's parameter are considered breaking changes. The properties listed in PARA_PROPERTY_REMOVE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
 * PARA_PROPERTY_REMOVE_BREAK_LIST = ["options", "id_part", "nargs"]
 
-**Example**: In new cli version, `nargs` is being removed to `categories` of cmd `az monitor log-profiles create` which caused incompatibility with current cmd's input.
+**Example**: In new cli version, configuration `nargs` is being removed from `--categories` of cmd `az monitor log-profiles create` which caused incompatibility with current cmd's script input.
 
 #### Before
 ```json5
