--- a/doc/breaking_change_rules/1010.md
+++ b/doc/breaking_change_rules/1010.md
@@ -2,10 +2,10 @@
 
 **Description**: Checks whether an existing property value is updated from a cmd's parameter. 
 
-**Analysis**: Not all configured properties updated for a cmd's parameter are considered as breaking changes. The properties listed in PARA_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
+**Analysis**: Not all configured properties updated from a cmd's parameter are considered breaking changes. The properties listed in PARA_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
 * PARA_PROPERTY_UPDATE_BREAK_LIST = ["default", "aaz_default"]
 
-**Example**: In new cli version, `default` is being updated from `3600` to `7200` for `timeout` of cmd `az monitor account wait` which may cause inconsistency in users' default behaviour.
+**Example**: In new cli version, `default` is being updated from `3600` to `7200` for `--timeout` of cmd `az monitor account wait` which may cause inconsistency in users' default behaviour.
 
 #### Before
 ```json5
