--- a/doc/breaking_change_rules/1012.md
+++ b/doc/breaking_change_rules/1012.md
@@ -1,10 +1,10 @@
 ### 1012 - Subgroup Removed
 
-**Description**: Checks whether an existing cmd is removed from the previous cli version. 
+**Description**: Checks whether an existing subgroup is removed from the previous cli version. 
 
-**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released in breaking-change window.
+**Analysis**: This is considered a breaking change because it may influence users' current workflow. This change requires to be released during breaking-change window.
 
-**Example**: Subgroup `az monitor diagnostic-setting subscription` is being removed during non-breaking-change window.
+**Example**: Subgroup `az monitor diagnostic-setting subscription` is removed during non-breaking-change window.
 
 #### Before
 > + az (command root) 
