--- a/doc/breaking_change_rules/1003.md
+++ b/doc/breaking_change_rules/1003.md
@@ -2,7 +2,7 @@
 
 **Description**: Checks whether a new property is configured to a cmd from the previous cli version. 
 
-**Analysis**: Not all newly configured properties for a cmd are considered as breaking changes. The properties listed in CMD_PROPERTY_ADD_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
+**Analysis**: Not all newly configured properties for a cmd are considered breaking changes. The properties listed in CMD_PROPERTY_ADD_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes. 
 * CMD_PROPERTY_ADD_BREAK_LIST = ["confirmation"]
 
 **Example**: In new cli version, `confirmation` is being added to cmd `az monitor private-link-scope scoped-resource delete` which caused corrupt workflows.
