--- a/doc/breaking_change_rules/1005.md
+++ b/doc/breaking_change_rules/1005.md
@@ -2,7 +2,7 @@
 
 **Description**: Checks whether a cmd's property value is updated from the previous cli version. 
 
-**Analysis**: Not all configured properties updated for a cmd are considered as breaking changes. The properties listed in CMD_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
+**Analysis**: Not all configured properties updated for a cmd are considered breaking changes. The properties listed in CMD_PROPERTY_UPDATE_BREAK_LIST below are thought to influence or interrupt current workflow and be breaking changes.
 For now, updated properties in cmd level does not break workflow.
 * CMD_PROPERTY_UPDATE_BREAK_LIST = [] 
 
